// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader[snapshot] Snapshot test: Cascader[site/pages/components/Cascader/example-01-base.tsx] 1`] = `
<span>
  <div>
    <div>
      <span>
         
      </span>
      <a>
        <svg>
          <path />
        </svg>
      </a>
    </div>
  </div>
</span>
`;

exports[`Cascader[snapshot] Snapshot test: Cascader[site/pages/components/Cascader/example-02-multiple.tsx] 1`] = `
<div>
  <div>
    <label>
      <input />
      <i />
      <span>
        mode=0 (full)
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        mode=1 (half)
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        mode=2 (child only)
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        mode=3 (shallow)
      </span>
    </label>
  </div>
  <br />
  <span>
    <div>
      <div>
        <a>
          node 0
        </a>
        <a>
          node 0-0
        </a>
        <a>
          node 0-0-0
        </a>
        <a />
      </div>
    </div>
  </span>
</div>
`;

exports[`Cascader[snapshot] Snapshot test: Cascader[site/pages/components/Cascader/example-03-hover.tsx] 1`] = `
<span>
  <div>
    <div>
      <span>
         
      </span>
      <a>
        <svg>
          <path />
        </svg>
      </a>
    </div>
  </div>
</span>
`;

exports[`Cascader[snapshot] Snapshot test: Cascader[site/pages/components/Cascader/example-04-disabled.tsx] 1`] = `
<span>
  <div>
    <div>
      <span>
         
      </span>
    </div>
  </div>
</span>
`;

exports[`Cascader[snapshot] Snapshot test: Cascader[site/pages/components/Cascader/example-05-lazyload.tsx] 1`] = `
<span>
  <div>
    <div>
      <span>
         
      </span>
      <a>
        <svg>
          <path />
        </svg>
      </a>
    </div>
  </div>
</span>
`;

exports[`Cascader[snapshot] Snapshot test: Cascader[site/pages/components/Cascader/example-06-filter.tsx] 1`] = `
<div>
  <div>
    <div>
      Single
    </div>
    <div>
      <span>
        <div>
          <div>
            <span>
               
            </span>
            <a>
              <svg>
                <path />
              </svg>
            </a>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div>
      Multiple
    </div>
    <div>
      <span>
        <div>
          <div>
            <span>
               
            </span>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader[snapshot] Snapshot test: Cascader[site/pages/components/Cascader/example-07-innertitle.tsx] 1`] = `
<span>
  <div>
    <div>
      <div>
        select city
      </div>
      <div>
        <div>
          <span>
             
          </span>
          <a />
        </div>
      </div>
      <div>
        <div>
          select city
        </div>
      </div>
    </div>
  </div>
</span>
`;
